# ml-kickstarter

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  contract_store.json  docker-compose.yaml  load_contracts.py  new.json  pyproject.toml  serve_model_locally.py
.devcontainer/: devcontainer.json
.github/workflows/: test.yml  update-contract.yml
data/: aligned-chunks.parquet  module_chunks.csv
data/sentiment/: predictions.csv
data/wine-quality/: predictions.csv  red_with_id.csv  white_with_id.csv
data/wine/datasets/artichoke-cuscus/: test.parquet  train.parquet  validate.parquet
data/wine/datasets/classic-wombat/: test.parquet  train.parquet  validate.parquet
data/wine/datasets/invaluable-cobra/: test.parquet  train.parquet  validate.parquet
data/wine/datasets/marigold-chachalaca/: test.parquet  train.parquet  validate.parquet
data/wine/datasets/mysterious-sunfish/: test.parquet  train.parquet  validate.parquet
data/wine/datasets/proud-unicorn/: test.parquet  train.parquet  validate.parquet
docker/: Dockerfile  Dockerfile.catalog  Dockerfile.dev  Dockerfile.devcontainer  Dockerfile.serve
mlruns/0/: meta.yaml
src/: custom_mlflow_server.py  experiment_tracker.py  load_store.py  mlflow_model.py  model_registry.py  serve_model_locally.py
src/contracts/: wine.py  wine_model.py
src/kickstarter_docs/: chat_app.py  contract.py  load_chunks.py
src/movie_review/: contracts.py  review_app.py  train.py
src/pipelines/: available.py  batch_predict.py  materialize.py  train.py
src/wine/: contracts.py  train.py  wine.py  wine_model.py
streamlit_components/: async_stream.py
tests/: test_train_pipeline.py
