[tool.poetry]
name = "ml-kickstarter"
version = "0.1.0"
description = "A project to kickstart ml projects"
authors = ["Mats E. Mollestad <mats@mollestad.no>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10,<3.12"
aligned = { git="https://github.com/MatsMoll/aligned.git", branch="matsei/langchain", extras=["ollama", "lancedb"] }
mlflow = "^2.11.3"
prefect = "2.19.0"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.streamlit.dependencies]
streamlit = "*"

[tool.poetry.group.lsp.dependencies]
pyright = "*"

[tool.poetry.group.dev.dependencies]
watchfiles = "^0.21.0"
pytest-asyncio = "^0.23.6"
pytest = "^8.2.0"
mypy = "^1.11.0"

[tool.poetry.group.serve.dependencies]
mlserver-mlflow = "^1.6.0"
mlserver = "^1.6.0"

[tool.mypy]
pretty = false
strict = false
python_version = "3.10"
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = false
no_namespace_packages = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
